--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/deb8a1c619.js"
+      crossorigin="anonymous"
+    ></script>
     <title>vue-cake</title>
   </head>
   <body>
